migrate from multiple addressees to single addressee